[package]
name = "store"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "store"
path = "src/main/mod.rs"

[dependencies]
bzip2 = "0.4.3"
clap = { version = "3.1.10", features = ["cargo"] }
fs_extra = "1.2.0"
reqwest = { version = "0.11.4", features = ["blocking", "stream"] }
tar = "0.4.28"
flate2 = "1.0.23"
xz2 = "0.1.6"
humansize = "1.1.1"
zip = "0.6.2"

